# evops-client-ext

./: Cargo.toml  README.md
crate/: Cargo.toml
crate/src/: lib.rs  markdown.rs
crate/src/markdown/: ast.rs  pb.rs  unist.rs
crate/src/markdown/ast/: blockquote.rs  code.rs  delete.rs  emphasis.rs  heading.rs  inline_code.rs  link.rs  list.rs  paragraph.rs  root.rs  strong.rs  text.rs  thematic_break.rs
crate/src/markdown/ast/heading/: depth.rs
crate/src/markdown/ast/link/: child.rs
crate/src/markdown/ast/list/: item.rs
crate/src/markdown/ast/paragraph/: child.rs
crate/src/markdown/ast/root/: child.rs
crates/evops-client-ext/: Cargo.toml
crates/evops-client-ext/src/: lib.rs  main.rs  markdown.rs
crates/evops-client-ext/src/markdown/: pb.rs
crates/evops-client-ext/src/markdown/ast/: code.rs  delete.rs  inline_code.rs  link.rs  strong.rs  text.rs
crates/evops-client-ext/src/markdown/ast/link/: child.rs
crates/evops-extism/: Cargo.toml
crates/evops-extism/src/: lib.rs
crates/evops-markdown/: Cargo.toml  build.rs
crates/evops-markdown/src/: lib.rs  pb.rs  unist.rs
crates/evops-markdown/src/ast/: blockquote.rs  code.rs  delete.rs  emphasis.rs  heading.rs  inline_code.rs  link.rs  list.rs  paragraph.rs  root.rs  strong.rs  text.rs  thematic_break.rs
crates/evops-markdown/src/ast/heading/: depth.rs
crates/evops-markdown/src/ast/link/: child.rs
crates/evops-markdown/src/ast/list/: item.rs
crates/evops-markdown/src/ast/paragraph/: child.rs
crates/evops-markdown/src/ast/root/: child.rs
crates/evops-models/: Cargo.toml
crates/evops-models/src/: common.rs  error.rs  impls.rs  lib.rs  services.rs
crates/evops-models/src/services/: auth.rs  event.rs  language.rs  tag.rs  user.rs
crates/evops-models/src/services/auth/: jwt_numeric_date.rs
crates/evops-models/src/services/event/: image.rs
crates/evops-pb-ext/: Cargo.toml  build.rs
crates/evops-pb-ext/src/: conversions.rs
crates/evops-uniffi/: Cargo.toml
crates/evops-uniffi/src/: conversions.rs  lib.rs
evops-markdown/: Cargo.toml  build.rs
evops-markdown/src/: ast.rs  lib.rs  pb.rs  unist.rs
evops-markdown/src/ast/: blockquote.rs  code.rs  delete.rs  emphasis.rs  heading.rs  inline_code.rs  link.rs  list.rs  paragraph.rs  root.rs  strong.rs  text.rs  thematic_break.rs
evops-markdown/src/ast/heading/: depth.rs
evops-markdown/src/ast/link/: child.rs
evops-markdown/src/ast/list/: item.rs
evops-markdown/src/ast/paragraph/: child.rs
evops-markdown/src/ast/root/: child.rs
proto/evops/api/v1/: api.proto  event_service.proto  tag_service.proto  user_service.proto
proto/evops/ext/v1/: ext.proto
proto/evops/markdown/v1/: markdown.proto
proto/evops/ml/v1/: ml.proto
