[workspace]
resolver = "3"
members = ["crates/*/"]

[workspace.dependencies]
evops-markdown = { path = "crates/evops-markdown/" }

extism-pdk = { version = "1.4.1", default-features = false }
markdown = "1.0.0"
prost = "0.13.5"
prost-build = "0.13.5"
schemars = { version = "0.9.0", features = ["preserve_order"] }
serde = "1.0.219"
thiserror = "2.0.12"
uniffi = "0.29.2"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
