[package]
name = "evops-client-ext"
edition = "2024"

[dependencies]
extism-pdk = { workspace = true, optional = true, features = ["protobuf"] }
markdown = { workspace = true }
prost = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["derive"] }
thiserror = { workspace = true }
uniffi = { workspace = true, optional = true, features = ["cli"] }

[build-dependencies]
prost-build = { workspace = true }

[features]
extism = ["protobuf", "dep:extism-pdk"]
protobuf = ["dep:prost"]
schemars = ["serde", "dep:schemars"]
serde = ["dep:serde"]
uniffi = ["dep:uniffi"]

[lints]
workspace = true
