[package]
name = "evops-markdown"
edition = "2024"

[dependencies]
markdown = { workspace = true }
prost = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["derive"] }
thiserror = { workspace = true }
uniffi = { workspace = true, optional = true }

[build-dependencies]
prost-build = { workspace = true }

[features]
protobuf = ["dep:prost"]
schemars = ["serde", "dep:schemars"]
serde = ["dep:serde"]
uniffi = ["dep:uniffi"]

[lints]
workspace = true
