[package]
name = "evops-models"
edition = "2024"

[dependencies]
aide = { workspace = true, features = ["macros"], optional = true }
axum = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
diesel = { workspace = true }
image = { workspace = true, features = [
  # "avif-native",
], optional = true }
nutype = { workspace = true, features = ["new_unchecked", "regex", "serde"] }
regex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true, optional = true }
uuid = { workspace = true, features = ["serde"] }
webp = { workspace = true, optional = true }

[features]
aide = ["axum", "dep:aide"]
axum = ["dep:axum"]
chrono = ["dep:chrono"]
default = ["chrono", "image"]
image = ["dep:bytes", "dep:image", "dep:webp"]
tonic = ["dep:tonic"]

[lints]
workspace = true
